--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
-    "next": "13.3.0",
-    "react": "18.2.0",
+    "next": "^13.3.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
   }
 }
